src/global.scss
:root {
  --De-emphasis: #ebebeb;
  --Democrat-Called: #0062d1;
  --Democrat-Label-Supp: #003e94;
  --Democrat-Likely: #a0c3f3;
  --Republican-Called: #cd1819;
  --Republican-Label-Supp: #6b0002;
  --Republican-Likely: #f5b7b2;
  --Secondary-labels: #525252;
  --Stroke-De-emphasis: #7a7a7a;
}

:global(.us24-accessible-hide) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

